--- a/frontend/public/css/Markdown.scss
+++ b/frontend/public/css/Markdown.scss
@@ -75,7 +75,10 @@
       }
    }
 
-   // img {
-   //    max-width: 80%;
-   // }
+   img {
+      max-width: 80%;
+      max-height: 80vh;
+      margin: auto;
+      display: block;
+   }
 }
